[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpupath"
version = "0.1.0"
description = "GPU-accelerated shortest-path query engine for static graphs"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Nirupom Bose Roy", email = "nirupomboseroy99@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
    "numpy>=2.4.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "black>=26",
    "isort>=8.0.0"

]

[project.urls]
Homepage = "https://github.com/NefariousNiru/gpupath"
Repository = "https://github.com/NefariousNiru/gpupath"
Issues = "https://github.com/NefariousNiru/gpupath/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"