[build-system]
requires = [
    "scikit-build-core>=0.10,<1",
    "pybind11>=3.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "gpupath"
version = "0.1.0"
description = "GPU-accelerated shortest-path query engine for static graphs"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "NefariousNiru", email = "nirupomboseroy99@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
    "pybind11>=3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "black>=26",
    "isort>=8.0.0"
]

[project.urls]
Homepage = "https://github.com/NefariousNiru/gpupath"
Repository = "https://github.com/NefariousNiru/gpupath"
Issues = "https://github.com/NefariousNiru/gpupath/issues"

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["src/gpupath"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake]
version = ">=3.18"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.black]
target-version = ["py312"]